--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "install": "^0.13.0",
     "next": "12.0.10",
+    "npm": "^8.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
